# zect

./: LICENSE  README.md  index.html  pyproject.toml
examples/: basic_usage.py  subscribe_contract.py
pyderiv/: __init__.py  client.py  exceptions.py
