[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyderiv"
version = "0.1.0"
description = "A simple async Python wrapper for the Deriv WebSocket API."
authors = [ { name = "nserekoc11" } ]
dependencies = ["websockets>=10.0"]

[database]
enabled = true
porta = [ 8001, 8001, 8002 ]
data = "[\"<》》\"]" # Escaped quotes

[servers]
[servers.alpha]
ip = "10.0.0.1"
dc = "eqdc10"